# simpleprotocol

./: README.md
examples/serial/: README.md
examples/serial/cpp/: CMakeLists.txt  vehicle_serial.cpp
examples/serial/cpp/groundcontrol/: CMakeLists.txt  groundcontrol.cpp  groundcontrol.h  main.cpp
examples/serial/cpp/serialif/: serialif.cpp  serialif.h
examples/serial/cpp/tctm/: telecommands.cpp  telecommands.h  telemetry.cpp  telemetry.h
examples/serial/python/: groundcontrol_serial.py  serialif.py  tctm.py  vehicle_serial.py
simpleprotocol-cpp/: README.md
simpleprotocol-cpp/example/: CMakeLists.txt  main.cpp  myprotocol.h
simpleprotocol-cpp/include/simpleprotocol/: protocol.hpp
simpleprotocolpy/: README.md
simpleprotocolpy/example/: decoder.py  encoder.py  myprotocol.py
simpleprotocolpy/src/simpleprotocol/: __init__.py
